# btools

./: .env  README.md  pyproject.toml  pyrightconfig.toml  test_gzip_env.py  test_gzip_full.py  test_gzip_input.py  test_pre_view_gz.py
src/btools/: __init__.py
src/btools/cli/: __init__.py  cli_commands.py
src/btools/cli/pre/: __init__.py  cli_pre.py
src/btools/scripts/: __init__.py
src/btools/scripts/pre/: __init__.py  pre_select_data.py  pre_view.py  rand_numbers.py
tests/: __init__.py  conftest.py
tests/data/: test_data.tsv
tests/data/data_pre/: large_test_data.csv  test_data.xlsx  test_data_pipe.txt  test_data_subset.csv  test_data_subset_row4_col4.csv
tests/scripts/: __init__.py
tests/scripts/pre/: README.md  __init__.py  test_pre_select_data.py  test_pre_view.py
