[project]
name = "btools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "medmaca", email = "matthew.care@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
btools = "btools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
